Adding requirements document

--- a/QueueSimulator.Tests/QueueSimulator.Tests.csproj
+++ b/QueueSimulator.Tests/QueueSimulator.Tests.csproj
@@ -66,6 +66,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Requirements.txt" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
