--- a/QueueSimulator.Tests/Requirements.txt
+++ b/QueueSimulator.Tests/Requirements.txt
@@ -1,4 +1,6 @@
 ﻿Y Messages should not be run if their time out has expired.
+Can Add Cars to the QueueManager
+Can Remove Cars from the QueueManager
 QueueManager should track which cars are processed on a thread.
 MessageProcessor should recover from an unhandled exception.
 Message entered queue should be logged for procmon.
