--- a/QueueSimulator.Tests/Requirements.txt
+++ b/QueueSimulator.Tests/Requirements.txt
@@ -2,7 +2,7 @@
 Y Can Add Cars to the QueueManager
 Y QueueManager should track which cars are processed on a thread.
 
-MessageProcessor should recover from an unhandled exception.
+Y MessageProcessor should recover from an unhandled exception.
 Can Remove Cars from the QueueManager
 
 Message entered queue should be logged for procmon.
