--- a/QueueSimulator.Tests/Requirements.txt
+++ b/QueueSimulator.Tests/Requirements.txt
@@ -3,7 +3,7 @@ Y Can Add Cars to the QueueManager
 Y QueueManager should track which cars are processed on a thread.
 
 Y MessageProcessor should recover from an unhandled exception.
-Can Remove Cars from the QueueManager
+Y Can Remove Cars from the QueueManager
 
 Message entered queue should be logged for procmon.
 Message processing complete should bbe logged for procmon. 
