--- a/QueueSimulator/QueueSimulator.csproj
+++ b/QueueSimulator/QueueSimulator.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Car.cs" />
+    <Compile Include="MessageProcessorFactoryWithException.cs" />
     <Compile Include="MessageProcessorWithException.cs" />
     <Compile Include="IMessage.cs" />
     <Compile Include="IMessageProcessor.cs" />
